Filter out emojis from reports
