# packages/backend/pkg/restapi/operations/get_showreports_id_tex_responses.go
@@ -1,0 +1,194 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"showplanner.io/pkg/models"
+)
+
+// GetShowreportsIDTexOKCode is the HTTP code returned for type GetShowreportsIDTexOK
+const GetShowreportsIDTexOKCode int = 200
+
+/*
+GetShowreportsIDTexOK Tex file contents
+
+swagger:response getShowreportsIdTexOK
+*/
+type GetShowreportsIDTexOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *GetShowreportsIDTexOKBody `json:"body,omitempty"`
+}
+
+// NewGetShowreportsIDTexOK creates GetShowreportsIDTexOK with default headers values
+func NewGetShowreportsIDTexOK() *GetShowreportsIDTexOK {
+
+	return &GetShowreportsIDTexOK{}
+}
+
+// WithPayload adds the payload to the get showreports Id tex o k response
+func (o *GetShowreportsIDTexOK) WithPayload(payload *GetShowreportsIDTexOKBody) *GetShowreportsIDTexOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get showreports Id tex o k response
+func (o *GetShowreportsIDTexOK) SetPayload(payload *GetShowreportsIDTexOKBody) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetShowreportsIDTexOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetShowreportsIDTexUnauthorizedCode is the HTTP code returned for type GetShowreportsIDTexUnauthorized
+const GetShowreportsIDTexUnauthorizedCode int = 401
+
+/*
+GetShowreportsIDTexUnauthorized Error
+
+swagger:response getShowreportsIdTexUnauthorized
+*/
+type GetShowreportsIDTexUnauthorized struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetShowreportsIDTexUnauthorized creates GetShowreportsIDTexUnauthorized with default headers values
+func NewGetShowreportsIDTexUnauthorized() *GetShowreportsIDTexUnauthorized {
+
+	return &GetShowreportsIDTexUnauthorized{}
+}
+
+// WithPayload adds the payload to the get showreports Id tex unauthorized response
+func (o *GetShowreportsIDTexUnauthorized) WithPayload(payload *models.Error) *GetShowreportsIDTexUnauthorized {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get showreports Id tex unauthorized response
+func (o *GetShowreportsIDTexUnauthorized) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetShowreportsIDTexUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(401)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetShowreportsIDTexNotFoundCode is the HTTP code returned for type GetShowreportsIDTexNotFound
+const GetShowreportsIDTexNotFoundCode int = 404
+
+/*
+GetShowreportsIDTexNotFound Error
+
+swagger:response getShowreportsIdTexNotFound
+*/
+type GetShowreportsIDTexNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetShowreportsIDTexNotFound creates GetShowreportsIDTexNotFound with default headers values
+func NewGetShowreportsIDTexNotFound() *GetShowreportsIDTexNotFound {
+
+	return &GetShowreportsIDTexNotFound{}
+}
+
+// WithPayload adds the payload to the get showreports Id tex not found response
+func (o *GetShowreportsIDTexNotFound) WithPayload(payload *models.Error) *GetShowreportsIDTexNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get showreports Id tex not found response
+func (o *GetShowreportsIDTexNotFound) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetShowreportsIDTexNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetShowreportsIDTexInternalServerErrorCode is the HTTP code returned for type GetShowreportsIDTexInternalServerError
+const GetShowreportsIDTexInternalServerErrorCode int = 500
+
+/*
+GetShowreportsIDTexInternalServerError Error
+
+swagger:response getShowreportsIdTexInternalServerError
+*/
+type GetShowreportsIDTexInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetShowreportsIDTexInternalServerError creates GetShowreportsIDTexInternalServerError with default headers values
+func NewGetShowreportsIDTexInternalServerError() *GetShowreportsIDTexInternalServerError {
+
+	return &GetShowreportsIDTexInternalServerError{}
+}
+
+// WithPayload adds the payload to the get showreports Id tex internal server error response
+func (o *GetShowreportsIDTexInternalServerError) WithPayload(payload *models.Error) *GetShowreportsIDTexInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get showreports Id tex internal server error response
+func (o *GetShowreportsIDTexInternalServerError) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetShowreportsIDTexInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
